--- a/modelcache/config/mysql_config.ini
+++ b/modelcache/config/mysql_config.ini
@@ -1,6 +1,6 @@
 [mysql]
-host = mysql
+host = localhost
 port = 3306
-username = modelcache
-password = modelcache
+username = root
+password = root
 database = modelcache
